projects/vb6parse/snapshots/parsers/files/audiostation/form/audiostation_busy_form_load.snap
---
source: projects/vb6parse/tests/files/audiostation/form.rs
assertion_line: 68
expression: form_file
---
form:
  Form:
    name: Form_Busy
    tag: "1053"
    index: 0
    properties:
      appearance: ThreeD
      auto_redraw: Manual
      back_color:
        System:
          index: 15
      border_style: Sizable
      caption: "-"
      client_height: 285
      client_left: 2565
      client_top: 1500
      client_width: 6675
      clip_controls: Clipped
      control_box: Included
      draw_mode: CopyPen
      draw_style: Solid
      draw_width: 1
      enabled: Enabled
      fill_color:
        System:
          index: 0
      fill_style: Transparent
      font:
        name: MS Sans Serif
        size: 8
        charset: 0
        weight: 400
        underline: false
        italic: false
        strikethrough: false
      font_transparent: Transparent
      fore_color:
        System:
          index: 18
      has_dc: HasContext
      height: 240
      help_context_id: 0
      icon: ~
      key_preview: false
      left: 0
      link_mode: None
      link_topic: Form1
      max_button: Included
      mdi_child: false
      min_button: Included
      mouse_icon: ~
      mouse_pointer: Default
      moveable: Moveable
      negotiate_menus: true
      ole_drop_mode: None
      palette: ~
      palette_mode: HalfTone
      picture: ~
      right_to_left: LeftToRight
      scale_height: 285
      scale_left: 0
      scale_mode: Twip
      scale_top: 0
      scale_width: 6675
      show_in_taskbar: Show
      start_up_position: WindowsDefault
      top: 0
      visible: Visible
      whats_this_button: Excluded
      whats_this_help: F1Help
      width: 240
      window_state: Normal
    controls:
      - name: ProgressBar
        tag: ""
        index: 0
        kind:
          Custom:
            properties:
              property_store:
                Appearance: "0"
                ExtentX: "11668"
                ExtentY: "450"
                Height: "255"
                Left: "45"
                Scrolling: "1"
                TabIndex: "0"
                Top: "15"
                Version: "393216"
                Width: "6615"
            property_groups: []
    menus: []
objects:
  - uuid: 831fdd16-0c5c-11d2-a9fc-0000f8754da1
    version: "2.0"
    unknown1: "0"
    file_name: mscomctl.ocx
version:
  major: 5
  minor: 0
attributes:
  name: Form_Busy
  global_name_space: Local
  creatable: "False"
  predeclared_id: "True"
  exposed: "False"
  description: ~
  ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: SubStatement
        children:
          - kind: PrivateKeyword
            text: Private
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: Form_Load
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: CallStatement
                children:
                  - kind: CallKeyword
                    text: Call
                  - kind: Whitespace
                    text: " "
                  - kind: Identifier
                    text: TranslateFormAndControls
                  - kind: LeftParenthesis
                    text: (
                  - kind: ArgumentList
                    children:
                      - kind: Argument
                        children:
                          - kind: IdentifierExpression
                            children:
                              - kind: MeKeyword
                                text: Me
                  - kind: RightParenthesis
                    text: )
                  - kind: Newline
                    text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\n"
