projects/vb6parse/snapshots/parsers/files/audiostation/form/audiostation_system_form_load.snap
---
source: projects/vb6parse/tests/files/audiostation/form.rs
assertion_line: 424
expression: form_file
---
form:
  Form:
    name: Form_System
    tag: ""
    index: 0
    properties:
      appearance: ThreeD
      auto_redraw: Manual
      back_color:
        System:
          index: 15
      border_style: Sizable
      caption: Dialog Caption
      client_height: 3195
      client_left: 2715
      client_top: 3375
      client_width: 6030
      clip_controls: Clipped
      control_box: Included
      draw_mode: CopyPen
      draw_style: Solid
      draw_width: 1
      enabled: Enabled
      fill_color:
        System:
          index: 0
      fill_style: Transparent
      font:
        name: MS Sans Serif
        size: 8
        charset: 0
        weight: 400
        underline: false
        italic: false
        strikethrough: false
      font_transparent: Transparent
      fore_color:
        System:
          index: 18
      has_dc: HasContext
      height: 240
      help_context_id: 0
      icon: ~
      key_preview: false
      left: 0
      link_mode: None
      link_topic: Form1
      max_button: Included
      mdi_child: false
      min_button: Included
      mouse_icon: ~
      mouse_pointer: Default
      moveable: Moveable
      negotiate_menus: true
      ole_drop_mode: None
      palette: ~
      palette_mode: HalfTone
      picture: ~
      right_to_left: LeftToRight
      scale_height: 3195
      scale_left: 0
      scale_mode: Twip
      scale_top: 0
      scale_width: 6030
      show_in_taskbar: Show
      start_up_position: WindowsDefault
      top: 0
      visible: Visible
      whats_this_button: Excluded
      whats_this_help: F1Help
      width: 240
      window_state: Normal
    controls:
      - name: DataInter
        tag: ""
        index: 0
        kind:
          Custom:
            properties:
              property_store:
                ExtentX: "3201"
                ExtentY: "1296"
                Left: "480"
                Top: "360"
            property_groups: []
    menus: []
objects:
  - uuid: 5f5c69a3-5434-4a28-b392-38259f02830a
    version: "1.0"
    unknown1: "0"
    file_name: DataInter.ocx
version:
  major: 5
  minor: 0
attributes:
  name: Form_System
  global_name_space: Local
  creatable: "False"
  predeclared_id: "True"
  exposed: "False"
  description: ~
  ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: OptionStatement
        children:
          - kind: OptionKeyword
            text: Option
          - kind: Whitespace
            text: " "
          - kind: ExplicitKeyword
            text: Explicit
          - kind: Newline
            text: "\n"
      - kind: Newline
        text: "\n"
